--- a/frontend/index.html
+++ b/frontend/index.html
@@ -86,6 +86,13 @@ hr {
 .result {
   padding: 1em;
 }
+.result, .line {
+  animation: fadein 0.5s;
+}
+@keyframes fadein {
+  from { opacity: 0 }
+  to   { opacity: 1 }
+}
 </style>
   </head>
   <body>
