Group by package

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -20,6 +20,11 @@
           <a href="https://docs.rs/regex/1/regex/#syntax"> Regex Syntax Reference </a>
         </div>
         <div id="results"></div>
+        <template id="package-template">
+          <details class="package">
+            <summary></summary>
+          </details>
+        </template>
         <template id="result-template">
           <div class="result">
             <h3></h3>
