Report error messages from rg

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -45,6 +45,10 @@
             </td>
           </tr>
         </template>
+        <template id="error-template">
+          <div class="error">
+          </div>
+        </template>
     </main>
     <script></script>
   </body>
