Report search status

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -20,6 +20,12 @@
           <a href="https://docs.rs/regex/1/regex/#syntax"> Regex Syntax Reference </a>
         </div>
         <div id="results"></div>
+        <template id="results-template">
+          <div class="results">
+            <div class="results-items"></div>
+            <div class="results-status">Loading...</div>
+          </div>
+        </template>
         <template id="package-template">
           <details class="package">
             <summary></summary>
