Expand/collapse button functionality

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -15,8 +15,8 @@
         <div class="search">
           <div class="controls">
             <div>
-              <button>Expand All</button>
-              <button>Collapse All</button>
+              <button id="button-expand-all">Expand All</button>
+              <button id="button-collapse-all">Collapse All</button>
             </div>
             <a href="https://docs.rs/regex/1/regex/#syntax"> Regex Syntax Reference </a>
           </div>
