--- a/frontend/index.html
+++ b/frontend/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="icon" href="favicon.svg">
     <title> Hackage Search </title>
+    <link rel="canonical" href="/">
     <style></style>
   </head>
   <body>
