[SIO-321] UPDATE title
Marketing requested to put different title from H1 tag for all subdomains of serokell.io for SEO reasons

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="icon" href="favicon.svg">
-    <title> Hackage Search </title>
+    <title>Hackage Search by Serokell</title>
     <link rel="canonical" href="https://hackage-search.serokell.io/">
     <style></style>
   </head>
